--- a/index.html
+++ b/index.html
@@ -1,2 +1,19 @@
-<p>test<p>
-<p>test2</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>fiirst</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+</style>
+</head>
+<body>
+
+<h1>says friggin everyone</h1>
+<p>A website created by me.</p>
+
+</body>
+</html>
