--- a/index.html
+++ b/index.html
@@ -1,19 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>lol</title>
+<title>dog</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
+
+.header {
+  padding: 80px;
+  text-align: center;
+  background: grey;
+  color: white;
+}
+
+.header h1 {
+  font-size: 40px;
+}
+
+.footer {
+  padding: 10px;
+  text-align: center;
+  background: #ddd;
+  font-size: 10px;
+}
+
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.navbar a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
+}
+
+.navbar a.right {
+  float: right;
+}
+
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
 </style>
 </head>
 <body>
 
-<h1>says friggin everyone</h1>
-<p>A website created by me.</p>
+<div class="header">
+  <h1>Ruffa</h1>
+  <p>The cutest dog on earth.</p>
+</div>
 
+<div class="navbar">
+    <a href="#">Link</a>
+    <a href="#">Link</a>
+    <a href="#">Link</a>
+    <a href="#" class="right">Link</a>
+  </div>
+  
+
+<div class="footer">
+    <h2>made by johannes</h2>
+  </div>
+
+  </div>
 </body>
 </html>
