--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@ body {
 }
 
 .footer {
-  padding: 10px;
+  padding: 5px;
   text-align: center;
   background: #ddd;
-  font-size: 10px;
+  font-size: 5px;
 }
 
 .navbar {
@@ -54,8 +54,8 @@ body {
 <body>
 
 <div class="header">
-  <h1>Ruffa</h1>
-  <p>The cutest dog on earth.</p>
+  <h1>EKhub</h1>
+  <p>your local information hut.</p>
 </div>
 
 <div class="navbar">
@@ -67,7 +67,7 @@ body {
   
 
 <div class="footer">
-    <h2>made by johannes</h2>
+    <h2>made by johlar3</h2>
   </div>
 
   </div>
