--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body {
 .header {
   padding: 80px;
   text-align: center;
-  background: grey;
+  background: #0f2a19;
   color: white;
 }
 
@@ -59,10 +59,10 @@ body {
 </div>
 
 <div class="navbar">
-    <a href="#">Link</a>
-    <a href="#">Link</a>
-    <a href="#">Link</a>
-    <a href="#" class="right">Link</a>
+    <a href="https://start.unikum.net">unikum</a>
+    <a href="https://www.clioonline.se/">clio</a>
+    <a href="https://login.microsoftonline.com">office</a>
+    <a href="https://web.skola24.se/timetable/timetable-viewer/uppsala.skola24.se/Eriksbergsskolan%207-9/" class="right">schema</a>
   </div>
   
 
