--- a/index.html
+++ b/index.html
@@ -1,75 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-<title>dog</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-}
-
-.header {
-  padding: 80px;
-  text-align: center;
-  background: #0f2a19;
-  color: white;
-}
-
-.header h1 {
-  font-size: 40px;
-}
-
-.footer {
-  padding: 5px;
-  text-align: center;
-  background: #ddd;
-  font-size: 5px;
-}
-
-.navbar {
-  overflow: hidden;
-  background-color: #333;
-}
-
-.navbar a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 20px;
-  text-decoration: none;
-}
-
-.navbar a.right {
-  float: right;
-}
-
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
-</style>
+    <title>EBhub.se</title>
 </head>
+
 <body>
+    <style>
+body {
+    background-color: black;
+    color: goldenrod;
+    text-align: left;
+    padding-left: 35%;
+    padding-top: 10%
+}
 
-<div class="header">
-  <h1>EKhub</h1>
-  <p>your local information hut.</p>
-</div>
+p {
+    font-size: 150%;
+}
+a {
+    color: goldenrod;
+    font-style: bold;
+    font-size: 130%;
+}
+</style>
 
-<div class="navbar">
-    <a href="https://start.unikum.net">unikum</a>
-    <a href="https://www.clioonline.se/">clio</a>
-    <a href="https://login.microsoftonline.com">office</a>
-    <a href="https://web.skola24.se/timetable/timetable-viewer/uppsala.skola24.se/Eriksbergsskolan%207-9/" class="right">schema</a>
-  </div>
-  
-
-<div class="footer">
-    <h2>made by johlar3</h2>
-  </div>
-
-  </div>
+<h1>EBhub.se</h1>
+<p>tools:</p><br>
+<a href="https://www.office.com/">office</a><br>
+<a href="https://start.unikum.net/">unikum</a><br>
+<a href="https://my.clio.me/se">clio</a><br><br>
+<p>downloads:</p>
+<a href="#">cmd3</a><br>
 </body>
+
 </html>
