--- a/index.html
+++ b/index.html
@@ -23,15 +23,18 @@ a {
     font-style: bold;
     font-size: 130%;
 }
+
 </style>
 
 <h1>EBhub.se</h1>
-<p>tools:</p><br>
+<p>tools:</p>
 <a href="https://www.office.com/">office</a><br>
 <a href="https://start.unikum.net/">unikum</a><br>
 <a href="https://my.clio.me/se">clio</a><br><br>
 <p>downloads:</p>
-<a href="#">cmd3</a><br>
+<a href="https://th3nd.github.io/cmd3.cmd">cmd3</a><br>
+<br><br><br>
+<img src="rotating.gif"style="width: 60px;">
 </body>
 
 </html>
