--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>EBhub.se</title>
+    <title>EBhub.ml</title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@ a {
 
 </style>
 
-<h1>EBhub.se</h1>
+<h1>EBhub</h1>
 <p>tools:</p>
 <a href="https://www.office.com/">office</a><br>
 <a href="https://start.unikum.net/">unikum</a><br>
