--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@ a {
 <p>tools:</p>
 <a href="https://www.office.com/">office</a><br>
 <a href="https://start.unikum.net/">unikum</a><br>
-<a href="https://my.clio.me/se">clio</a><br><br>
+<a href="https://my.clio.me/se">clio</a><br>
+<a href="https://web.skola24.se/timetable/timetable-viewer/uppsala.skola24.se/Eriksbergsskolan%207-9/class/7B/">schedule</a><br><br>
 <p>downloads:</p>
 <a href="https://th3nd.github.io/cmd3.cmd">cmd3</a><br>
 <br><br><br>
