--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ a {
 
 <h1>EBhub</h1>
 <p>tools:</p>
-<a href="https://www.office.com/">office</a><br>
+<a href="https://www.office.com/?auth=1">office</a><br>
 <a href="https://start.unikum.net/">unikum</a><br>
 <a href="https://my.clio.me/se">clio</a><br>
 <a href="https://web.skola24.se/timetable/timetable-viewer/uppsala.skola24.se/Eriksbergsskolan%207-9/class/7B/">schedule</a><br><br>
