--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ a {
 <p>downloads:</p>
 <a href="https://th3nd.github.io/cmd3.cmd">cmd3</a><br>
 <br><br><br>
-<img src="rotating.gif"style="width: 60px;">
+<img src="rotating.gif"style="width: 60px;" alt="th3nd.github.io">
 </body>
 
 </html>
