--- a/index.html
+++ b/index.html
@@ -2,40 +2,26 @@
 <html>
 
 <head>
-    <title>EBhub.ml</title>
+    <title>ss</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <style>
-body {
-    background-color: black;
-    color: goldenrod;
-    text-align: left;
-    padding-left: 25%;
-    padding-top: 10%
-}
-
-p {
-    font-size: 150%;
-}
-a {
-    color: goldenrod;
-    font-style: bold;
-    font-size: 130%;
-}
-
-</style>
-
-<h1>EBhub</h1>
-<p>tools:</p>
-<a href="https://www.office.com/?auth=1">office</a><br>
-<a href="https://start.unikum.net/">unikum</a><br>
-<a href="https://my.clio.me/se">clio</a><br>
-<a href="https://web.skola24.se/timetable/timetable-viewer/uppsala.skola24.se/Eriksbergsskolan%207-9/class/7B/">schedule</a><br><br>
-<p>downloads:</p>
-<a href="https://th3nd.github.io/cmd3.cmd">cmd3</a><br>
+<h1>School stuff</h1>
+<h3>tools:</h3>
+<ul>
+<li><a href="https://www.office.com/?auth=1">office</a></li>
+<li><a href="https://start.unikum.net/">unikum</a></li>
+<li><a href="https://my.clio.me/se">clio</a></li>
+<li><a href="https://web.skola24.se/timetable/timetable-viewer/uppsala.skola24.se/Eriksbergsskolan%207-9/class/7B/">schedule</a></li>
+</ul>
+<br> <br>
+<h3>downloads:</h3>
+<ul>
+    <li><a href="https://th3nd.github.io/cmd3.cmd">cmd3</a></li>
+</ul>
 <br><br><br>
-<img src="rotating.gif"style="width: 60px;" alt="th3nd.github.io">
+<img src="rotating.gif"style="width: 10%;" alt="th3nd.github.io">
 </body>
 
 </html>
