--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
     <body>
         <h1>th3nd.github.io</h1>
         <h3>main page</h3>
+        <ul>
+            <li><a href="https://th3nd.github.io/cmd3.cmd">cmd3</a></li>
+            <li><a href="https://th3nd.github.io/school">school</a></li>
+        </ul>
     </body>
 </html>
