--- a/school/index.html
+++ b/school/index.html
@@ -16,7 +16,7 @@
 <li><a href="https://web.skola24.se/timetable/timetable-viewer/uppsala.skola24.se/Eriksbergsskolan%207-9/class/7B/">schedule</a></li>
 </ul>
 <br><br><br><br><br><br><br><br>
-<img src="rotating.gif"style="width: 10%;" alt="th3nd.github.io">
+<a href="https://th3nd.github.io"><img src="rotating.gif"style="width: 10%;" alt="th3nd.github.io"></a>
 </body>
 
 </html>
