--- a/bee.html
+++ b/bee.html
@@ -1,7 +1,14 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="https://th3nd.github.io/style.css">
         <title>bee</title>
+        <style>
+            body {
+                background-color: black;
+                color: goldenrod;
+                font-size: 140%
+            }
+        </style>
     </head>
     <body>
         <p>According to all known laws
