--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>th3nd.github.io</title>
-        <link rel="stylesheet" href="https://th3nd.github.io/style.css">
+        <title>main</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <style>
+            .bg-image {
+                    background-image: url("https://ae01.alicdn.com/kf/HTB1mplegr1YBuNjSszhq6AUsFXaK/Laeacco-Forest-Park-Bench-Trees-Dusk-Spring-Nature-Photography-Background-Customized-Photographic-Backdrops-For-Photo-Studio.jpg_640x640.jpg");
+            }
+        </style>
     </head>
     <body>
-        <h1>th3nd.github.io</h1>
-        <h3>main page</h3>
-        <ul>
-            <li><a href="https://th3nd.github.io/cmd3.cmd">cmd3</a></li>
-            <li><a href="https://th3nd.github.io/school">school</a></li>
-        </ul>
+        <div class="bg-image"></div>
+        <div class="bg-header">
+            <h1>Th3nd</h1>
+            <a href="https://th3nd.github.io/school.html">school |</a>
+            <a href="#"> downloads</a>
+        </div>
     </body>
 </html>
