--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="bg-header">
             <h1>Th3nd</h1>
             <a href="https://th3nd.github.io/school.html">school |</a>
-            <a href="#"> downloads</a>
+            <a href="https://th3nd.github.io/downloads.html"> downloads</a>
         </div>
     </body>
 </html>
