--- a/downloads.html
+++ b/downloads.html
@@ -15,7 +15,7 @@
         <div class="bg-header">
             <h1>download</h1>
             <a href="cmd3.cmd">cmd3</a>
-            <a href="nws musik.apk">nws musik</a>
+            <a href="nws musik.apk">| nws</a>
         </div>
     </body>
 </html>
