UPPDATE doesnt look lik shet

--- a/downloads.html
+++ b/downloads.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <style>
             .bg-image {
-                background-image: url("https://chainimage.com/images/download-mountains-wallpaper-wallpaper-mountain-landscape.jpeg");
+                background-image: url("IMG_20180730_100413.jpg");
             }
         </style>
     </head>
