--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <style>
             .bg-image {
-                    background-image: url("https://ae01.alicdn.com/kf/HTB1mplegr1YBuNjSszhq6AUsFXaK/Laeacco-Forest-Park-Bench-Trees-Dusk-Spring-Nature-Photography-Background-Customized-Photographic-Backdrops-For-Photo-Studio.jpg_640x640.jpg");
+                    background-image: url(home.jpg)
             }
         </style>
     </head>
@@ -14,7 +14,7 @@
         <div class="bg-image"></div>
         <div class="bg-header">
             <h1>Th3nd</h1>
-            <a href="https://th3nd.github.io/school.html">school |</a>
+            <a href="https://th3nd.github.io/school.html">tools |</a>
             <a href="https://th3nd.github.io/downloads.html"> downloads</a>
         </div>
     </body>
