search enginge yes

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>main</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="gå in ja">
+        <meta name="keywords" content="Eriksbergsskolan, admin, skoldator, schema, cmd bypass, kommandotolk">
+        <meta name="author" content="Th3nd, johlar3">
         <link rel="stylesheet" type="text/css" href="style.css">
         <style>
             .bg-image {
