--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="gå in ja">
         <meta name="keywords" content="Eriksbergsskolan, admin, skoldator, schema, cmd bypass, kommandotolk">
         <meta name="author" content="Th3nd, johlar3">
+        <meta name="google-site-verification" content="ee40Zerncsg-G5QW4HcD4zjjeUIIdy-yE0wisVJt5JM" />
         <link rel="stylesheet" type="text/css" href="style.css">
         <style>
             .bg-image {
