--- a/school.html
+++ b/school.html
@@ -14,8 +14,8 @@
         <div class="bg-image"></div>
         <div class="bg-text">
             <ul>
-                <li><a href="https://my.clio.me/se">clio</a></li>
-                <p class="info">- online learning tool</p>
+                <li><a href="https://NE.se">NE.se</a></li>
+                <p class="info">- like wikipedia, but more</p>
                 <li><a href="https://www.office.com/?auth=1">office</a></li>               
                 <p class="info">- online text editor</p>
                 <li><a href="https://start.unikum.net/">unikum</a></li>
