--- a/index.html
+++ b/index.html
@@ -1,57 +1,96 @@
-
+﻿
 <!DOCTYPE html>
 <html lang="en">
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <link rel="icon" href="icon.jpg" />
+    <title>arsenic</title>
     <style>
-        body { background-color:grey; }
-        #snow{
-            background: none;
-            font-family: Androgyne;
-            background-image: url('gnome.png'), url('gnome.png'), url('gnome.png');
-            height: 100%;
-            left: 0;
-            position: absolute;
-            top: 0;
-            width: 100%;
-            z-index:1;
-            -webkit-animation: snow 1000s linear infinite;
-            -moz-animation: snow 1000s linear infinite;
-            -ms-animation: snow 1000s linear infinite;
-            animation: snow 1000s linear infinite;
-            -webkit-transform: translate3d(0,0,0);
-            -moz-transform: translate3d(0,0,0);
-            -ms-transform: translate3d(0,0,0);
-            -o-transform: translate3d(0,0,0);
-            transform: translate3d(0,0,0);
+        body {
+            background-color: rgb(15, 15, 15);
+            font-family: 'Courier New';
         }
-        @keyframes snow {
-          0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-          100% {background-position: 50000px 50000px, 10000px 20000px, -10000px 15000px;}          
-        }
-        @-moz-keyframes snow {
-          0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-          100% {background-position: 50000px 50000px, 10000px 20000px, -10000px 15000px;}          
-        }
-        @-webkit-keyframes snow {
-          0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-          100% {background-position: 50000px 50000px, 10000px 20000px, -10000px 15000px;}          
-        }
-        @-ms-keyframes snow {
-          0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-          100% {background-position: 50000px 50000px, 10000px 20000px, -10000px 15000px;}          
-        }  
 
-        a{
-            color: black;
-        } 
+        a {
+            color: rgb(128, 128, 128);
+            text-shadow: 20px
+        }
+
+        #watermark {
+            color: rgb(225, 165, 65);
+            font-style: oblique;
+            animation: test 2s infinite linear;
+        }
+
+        #main {
+            padding-left: 45%;
+            padding-top: 10%;
+            color: rgb(150, 230, 230);
+            font-style: normal;
+        }
+
+        #secondary {
+            text-align: center;
+            color: rgb(128, 128, 128);
+            font-size: x-small;
+            text-shadow: 0px 0px 4px rgb(128, 128, 128);
+            animation: lmfao 1s linear;
+        }
+
+
+        .typing-demo {
+            width: 68ch;
+            animation: typing 6s steps(68);
+            white-space: nowrap;
+            overflow: hidden;
+            font-family: monospace;
+            
+        }
+
+        @keyframes typing {
+            from {
+                width: 0
+            }
+        }
+
+        @keyframes test {
+            from {
+                text-shadow: 0px 0px 0px rgba(128, 128, 128, 200);
+            }
+            to {
+                text-shadow: 6px 6px 0px rgba(128, 128, 128, 200);
+            }
+        }
+
+        @keyframes lmfao {
+            from {
+                text-shadow: 0px 0px 0px rgb(128, 128, 128);
+            }
+            to {
+                text-shadow: 0px 0px 4px rgb(128, 128, 128);
+            }
+        }
     </style>
 </head>
 <body>
-    <div id="snow">
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">nightmare</a>
-</div>
+    <h6 id="watermark">th3nd.github.io</h6>
+    <div id="main">
+        <div class="typing-demo">
+            <h6>this is a super long example text to see if i did thi shit correctly</h6>
+        </div>
+    </div>
+    <div id="secondary">
+        <a href="https://steamcommunity.com/id/-svt">id/-svt</a>
+        <br />
+        <br />
+        <a href=" ">th3nd#3690</a>
+        <br />
+        <br />
+        <a href="https://open.spotify.com/playlist/7wf0WXwT4OwJNac3oHG4HO?si=9d759df33f6d49ad">spotify//music</a>
+        <br />
+        <br />
+        <a href="https://th3nd.github.io">site</a>
+    </div>
 </body>
 </html>
