--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <a href="https://open.spotify.com/playlist/7wf0WXwT4OwJNac3oHG4HO?si=9d759df33f6d49ad">spotify//music</a>
         <br />
         <br />
-        <a href="https://th3nd.github.io">site</a>
+        <a href="https://youtu.be/rSYyl92GF-w">video</a>
     </div>
 </body>
 </html>
