--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <a href="https://steamcommunity.com/id/-svt">id/-svt</a>
         <br />
         <br />
-        <a href=" ">th3nd#3690</a>
+        <a href="https://www.youtube.com/watch?v=LpntyrvOV2M">th3nd#3690</a>
         <br />
         <br />
         <a href="https://open.spotify.com/playlist/7wf0WXwT4OwJNac3oHG4HO?si=9d759df33f6d49ad">spotify//music</a>
