--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!--??--->
 <head>
     <link rel="icon" href="icon.jpg" />
     <title>arsenic</title>
@@ -10,76 +9,89 @@
 
         a {
             color: rgb(128, 128, 128);
+            text-shadow: 20px
         }
 
-        #watermark {
+        #I_Dont_Speak_To_Whores {
             color: rgb(225, 165, 65);
             font-style: oblique;
-            text-shadow: 3px 3px 0px rgba(128, 128, 128, 220);
-            animation: test 2s infinite linear;
+            animation: Introspective 2s infinite linear;
         }
 
-        #main {
+        #summerlovedoesntstay {
             padding-left: 45%;
-            padding-top: 10%;
+            padding-top: 5%;
             color: rgb(150, 230, 230);
             font-style: normal;
         }
 
-        #secondary {
-            text-align: center;
+
+        #idontwantthatmanyfriendsinthefirstplace {
+            text-align: left;
+            padding-left: 30%;
+            padding-top: 5%;
             color: rgb(128, 128, 128);
             font-size: x-small;
             text-shadow: 0px 0px 4px rgb(128, 128, 128);
-            animation: lmfao 1s linear;
+            animation: skinz 1s linear;
         }
 
 
-        .typing-demo {
+        .Yandere_Complex {
+            padding: 0px;
             width: 44ch;
-            animation: typing 6s steps(44);
             white-space: nowrap;
             overflow: hidden;
             font-family: monospace;
+            animation: redeyes 6s steps(68);
         }
 
-        @keyframes typing {
+
+        @keyframes Introspective {
             from {
-                width: 0
+                text-shadow: 0px 0px 0px rgba(128, 128, 128, 200);
             }
-        }
 
-        @keyframes test {
             to {
                 text-shadow: 6px 6px 0px rgba(128, 128, 128, 200);
             }
         }
 
-        @keyframes lmfao {
+        @keyframes skinz {
             from {
                 text-shadow: 0px 0px 0px rgb(128, 128, 128);
             }
+            to {
+                text-shadow: 0px 0px 4px rgb(128, 128, 128);
+            }
         }
+
+        @keyframes redeyes {
+            from {
+                width: 0
+            }
+        }
+
     </style>
 </head>
 <body>
-    <h6 id="watermark">th3nd.github.io</h6>
-    <div id="main">
-        <div class="typing-demo">
-            <h6>this is a super long example text to see if i did thi shit correctly</h6>
+    <h6 id="I_Dont_Speak_To_Whores">th3nd.github.io</h6>
+    <div id="summerlovedoesntstay">
+        <div class="Yandere_Complex">
+            <h6>this is a super long example text to see if i did thi shit correctly.</h6>
         </div>
     </div>
-    <div id="secondary">
+    <div id="idontwantthatmanyfriendsinthefirstplace">
         <a href="https://steamcommunity.com/id/-svt">id/-svt</a>
         <br />
         <br />
-        <a href="https://www.youtube.com/watch?v=LpntyrvOV2M">th3nd#3690</a>
+        <a href=" ">th3nd#3690</a>
         <br />
         <br />
         <a href="https://open.spotify.com/playlist/7wf0WXwT4OwJNac3oHG4HO?si=9d759df33f6d49ad">spotify//music</a>
         <br />
         <br />
-        <a href="https://youtu.be/rSYyl92GF-w">video</a>
+        <a href="https://th3nd.github.io">site</a>
     </div>
+
 </body>
-</html>
